implementation of mixins for models

--- a/reclibwh/core/model_templates/SVD_bias.json.template
+++ b/reclibwh/core/model_templates/SVD_bias.json.template
@@ -8,7 +8,7 @@
         "lr": 0.005,
         "loss": "PMFLoss",
         "inputs": ["u_in", "i_in"],
-        "outputs": ["rhat", "P", "Q"]
+        "outputs": ["rhat", "combine_all", "P", "Q"]
     },
     {
         "name": "u_in",
